--- a/starbucks-homepage-main/index2.html
+++ b/starbucks-homepage-main/index2.html
@@ -27,7 +27,7 @@
             <ul class="navbar-nav-right">
                 <li>
                     <a href="#">
-                        <img src="./img/marker.svg"><span>Find a store</span>
+                        <img src="./img/marker.svg"><span style="font-weight: bold;">Find a store</span>
                     </a>
                 </li>
                 <li>
@@ -35,9 +35,27 @@
                 </li>
                 <li><button class="btn btn-dark">Join now</button></li>
             </ul>
-
         </div>
     </nav>
+
+    <!--boxA-->
+    <section class="box box-a bg-primary text-center py-md">
+        <div class="box-inner">
+            <h2 class="text-xl">jingle all the way to free favorites</h2>
+            <p class="text-md">Join Starbucks® Rewards for delicious deals & exclusive offers. <a href="#">Learn more</a></p>
+        </div>
+    </section>
+    <!--boxB-->
+    <section class="box box-b bg-secondary grid-col-2">
+        <img src="img/box-b.png" alt="">
+        <div class="box-text">
+            <h2 class="text-xl">new to the nice list</h2>
+            <p class="text-md">For a nondairy twist on a holiday cookie classic, 
+                try the new Iced Sugar Cookie Almondmilk Latte.</p>
+            <button class="btn">Order Now</button>
+        </div>
+    </section>
+
 </body>
 
 </html>
